[gd_scene load_steps=5 format=3 uid="uid://c3l54mkl1be42"]

[ext_resource type="Texture2D" uid="uid://dsb025xerw5bp" path="res://Art/Environment/InteractableObjectPlaceholder.png" id="1_a0366"]
[ext_resource type="Script" uid="uid://cp0iucyq1mh0w" path="res://Scripts/InteractableItem.gd" id="2_5gqrf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbw6q"]
resource_local_to_scene = true
custom_solver_bias = 1.0
size = Vector2(150, 152)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0366"]
resource_local_to_scene = true
size = Vector2(150, 149)

[node name="InteractableItem" type="Sprite2D"]
texture = ExtResource("1_a0366")
script = ExtResource("2_5gqrf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pbw6q")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_a0366")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
